# heterogeneous_groups

./: .gitignore  LICENSE  README.rst  example.json  example_dp.json  pyproject.toml
exe/: heterogeneous_groups
lib/works/asm/heterogeneous_groups/: __init__.py  cli.py  data_properties.py  grouping.py
tests/: test_heterogeneous_groups.py
