[tool.poetry]
name = "works.asm.heterogeneous_groups"
version = "0.3.0"
description = "An implementation of a heterogeneous grouping algorithm extended to work with both numerical and categorical data based off of work done by Yueh-Min Huang and Ting-Ting Wu in \"A Systematic Approach for Learner Group Composition Utilizing U-Learning Portfolio\"."
authors = ["Amndeep Singh Mann <me@asm.works>"]
packages = [ { include = "works", from = "lib" }, ]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
bandit = "^1.7.0"
black = "^20.8b1"
isort = "^5.7.0"
pylint = "^2.6.0"
safety = "^1.10.3"
mypy = "^0.800"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
